--- a/index.html
+++ b/index.html
@@ -141,16 +141,20 @@
 
             <!-- cover -->
             <section class="cover">
-                <!--
+
                 <div class="cover__group">
-                    <h2 class="cover__title"></h2>
-                    <h3 class="cover__subtitle"></h3>
-                    <button class="cover__frame"></button>
+                    <h2 class="cover__title">Visite-Nos</h2>
+                    <h3 class="cover__subtitle">Durante todo o ano
+ Galeria de Arte Practicum
+ 404, Avenida Tim Berners-Lee.</h3>
+                    <a class="cover__frame" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Comprar bilhetes</a>
+
                 </div>
 
-                <div class="cover__overlay"></div>-->
+                <div class="cover__overlay"></div>
 
                 <img class="cover__image" src="images/__background.png">
+
             </section>
         </main>
 
