--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="viewport" contents="device-width">
     <title>De Pátria para Pátria</title>
-    <link rel="stylesheet" href="blocks/normalize.css">
+    <link rel="stylesheet" href="vendor/normalize.css">
     <link rel="stylesheet" href="blocks/style.css">
 
 </head>
