corrected the images names

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <div class="page">
          <!-- logo -->
          <div class="logo">
-            <img class="logo__image" src="images/__logo.png" alt="Logo image">
+            <img class="logo__image" src="images/logo__image.png" alt="Logo image">
          </div>
          <!-- lead -->
          <header class="lead">
             <h1 class="lead__title">De Pátria para Pátria</h1>
             <h2 class="lead__subtitle">Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia</h2>
-            <img class="lead__image" src="images/lead.png" alt="Lead image">
+            <img class="lead__image" src="images/lead_photo.png" alt="Lead image">
          </header>
          <!-- main with sections -->
          <main>
@@ -29,14 +29,14 @@
             </section>
             <!-- photo-grid -->
             <section class="photo-grid">
-               <img class="photo-grid__image" src="images/__item.png" alt="Item 1 image">
-               <img class="photo-grid__image" src="images/__item2.png" alt="Item 2 image">
-               <img class="photo-grid__image" src="images/__item3.png" alt="Item 3 image">
-               <img class="photo-grid__image" src="images/__item4.png" alt="Item 4 image">
-               <img class="photo-grid__image" src="images/__item5.png" alt="Item 5 image">
-               <img class="photo-grid__image" src="images/__item6.png" alt="Item 6 image">
-               <img class="photo-grid__image" src="images/__item7.png" alt="Item 7 image">
-               <img class="photo-grid__image" src="images/__item8.png" alt="Item 8 image">
+               <img class="photo-grid__image" src="images/photo-grid__item.png" alt="Item 1 image">
+               <img class="photo-grid__image" src="images/photo-grid__item2.png" alt="Item 2 image">
+               <img class="photo-grid__image" src="images/photo-grid__item3.png" alt="Item 3 image">
+               <img class="photo-grid__image" src="images/photo-grid__item4.png" alt="Item 4 image">
+               <img class="photo-grid__image" src="images/photo-grid__item5.png" alt="Item 5 image">
+               <img class="photo-grid__image" src="images/photo-grid__item6.png" alt="Item 6 image">
+               <img class="photo-grid__image" src="images/photo-grid__item7.png" alt="Item 7 image">
+               <img class="photo-grid__image" src="images/photo-grid__item8.png" alt="Item 8 image">
             </section>
             <!-- places -->
             <section class="places">
@@ -46,7 +46,7 @@
                      <p class="place__url-heading">Artista</p>
                      <p class="place__url-artist">Natalia Dolgushina, produtora de conteúdo</p>
                   </div>
-                  <img class="place__image" src="images/__image.png" alt="Kyev sample image">
+                  <img class="place__image" src="images/kyev__image.png" alt="Kyev sample image">
                   <div class="place__paragraphs">
                      <p class="place__paragraph">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p>
                      <p class="place__paragraph">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p>
@@ -60,7 +60,7 @@
                      <p class="place__url-artist">Steffan Warren, editor-chefe</p>
                      <p class="place__url-artist">Kseniya Glagoleva, gerente de projeto</p>
                   </div>
-                  <img class="place__image" src="images/__image2.png" alt="Cricieth sample image">
+                  <img class="place__image" src="images/cricieth__image2.png" alt="Cricieth sample image">
                   <div class="place__paragraphs">
                      <p class="place__paragraph">A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p>
                      <p class="place__paragraph">A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do Reino Unido.</p>
@@ -73,7 +73,7 @@
                      <p class="place__url-heading">Artista</p>
                      <p class="place__url-artist">Travis Turner, autor e editor</p>
                   </div>
-                  <img class="place__image" src="images/__image3.png" alt="Berea sample image">
+                  <img class="place__image" src="images/berea__image3.png" alt="Berea sample image">
                   <div class="place__paragraphs">
                      <p class="place__paragraph">Berea é uma pequena cidade localizada na parte central do Kentucky. A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado, e os visitantes encontrarão muitas oportunidades de compras: lojas com bijuterias artesanais, velas, artigos de madeira, galerias, ateliês de vidro e muito mais. A cidade realiza um festival anual que celebra o "pão de colher", um prato local feito com pão de milho e servido com uma colher de pau.</p>
                      <p class="place__paragraph">No entanto, provavelmente é mais conhecido pela faculdade local. O Berea College foi fundado em 1855 e foi o primeiro colégio no sul a ser racialmente integrado, bem como o primeiro a ser misto. De forma um tanto singular, não cobra mensalidades - todo aluno recebe uma bolsa de estudos integral.</p>
@@ -86,7 +86,7 @@
                      <p class="place__url-heading">Artista</p>
                      <p class="place__url-artist">Grevisse Kenguruka, editor técnico</p>
                   </div>
-                  <img class="place__image" src="images/__image.png" alt="Muramvya sample image">
+                  <img class="place__image" src="images/muramvya__image4.png" alt="Muramvya sample image">
                   <div class="place__paragraphs">
                      <p class="place__paragraph">Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais políticas e econômicas do país.</p>
                      <p class="place__paragraph">O clima é bastante frio à noite, mas durante o dia, você pensaria que está no céu. A 2.665 metros (8.743 pés) acima do nível do mar, o Monte Teza é um dos lugares mais frios da província. Mas essa brisa fresca permite uma das maiores plantações de chá e café do país, que representam a maior parte das exportações do Burundi.</p>
@@ -100,7 +100,7 @@
                      <p class="place__url-heading">Artista</p>
                      <p class="place__url-artist">Patrick Souza, desenvolvedor</p>
                   </div>
-                  <img class="place__image" src="images/cwb.jpg" alt="Curitiba sample image">
+                  <img class="place__image" src="images/cwb__image5.jpg" alt="Curitiba sample image">
                   <div class="place__paragraphs">
                      <p class="place__paragraph">Curitiba é um município brasileiro, capital do estado do Paraná, localizado a 934 metros de altitude no Primeiro Planalto Paranaense, a mais de 110 quilômetros do Oceano Atlântico, distante 1 386 km a sul de Brasília, capital federal.</p>
                      <p class="place__paragraph">Curitiba dispõe de uma rica vida cultural, que se expressa por meio dos seus cinemas, teatros, bibliotecas, museus, locais históricos, pontos turísticos e centros culturais da cidade. O calendário de celebrações e festividades é composto por festivais de música, de teatro, dos quais se destaca o Festival de Teatro de Curitiba, considerado o maior da América Latina, de cinema e outros, como o Festival de Etnias do Paraná e as bienais internacional e de quadrinhos.</p>
@@ -119,7 +119,7 @@ Galeria de Arte Practicum
                   <a class="cover__frame" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Comprar bilhetes</a>
                </div>
                <div class="cover__overlay"></div>
-               <img class="cover__image" src="images/__background.png" alt="Cover background image">
+               <img class="cover__image" src="images/cover_background.png" alt="Cover background image">
             </section>
          </main>
          <!-- footer -->
