update corrected code based on reviewer notes

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                <p class="intro__text intro__text_inf">A cidade de Practicum reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte Practicum tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
             </section>
             <!-- photo-grid -->
-            <section class="photo-grid">
-               <img class="photo-grid__image" src="images/photo-grid__item.png" alt="Item 1 image">
-               <img class="photo-grid__image" src="images/photo-grid__item2.png" alt="Item 2 image">
-               <img class="photo-grid__image" src="images/photo-grid__item3.png" alt="Item 3 image">
-               <img class="photo-grid__image" src="images/photo-grid__item4.png" alt="Item 4 image">
-               <img class="photo-grid__image" src="images/photo-grid__item5.png" alt="Item 5 image">
-               <img class="photo-grid__image" src="images/photo-grid__item6.png" alt="Item 6 image">
-               <img class="photo-grid__image" src="images/photo-grid__item7.png" alt="Item 7 image">
-               <img class="photo-grid__image" src="images/photo-grid__item8.png" alt="Item 8 image">
-            </section>
+            <div class="photo-grid">
+               <img class="photo-grid__image" src="images/photo-grid__item.png" alt="Foto de uma praia com tempo nublado.">
+               <img class="photo-grid__image" src="images/photo-grid__item2.png" alt="Foto de um região residencial perto de uma praia.">
+               <img class="photo-grid__image" src="images/photo-grid__item3.png" alt="Foto de uma igreja iluminada pelo por do sol.">
+               <img class="photo-grid__image" src="images/photo-grid__item4.png" alt="Foto de uma ponte.">
+               <img class="photo-grid__image" src="images/photo-grid__item5.png" alt="Foto de um campo verde.">
+               <img class="photo-grid__image" src="images/photo-grid__item6.png" alt="Foto de uma placa verde junto a uma area verde.">
+               <img class="photo-grid__image" src="images/photo-grid__item7.png" alt="Foto de uma cabana rustica.">
+               <img class="photo-grid__image" src="images/photo-grid__item8.png" alt="Foto de casas abaixo de um barranco.">
+            </div>
             <!-- places -->
             <section class="places">
                <div class="place">
