--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
       <div class="page">
          <!-- logo -->
-         <img class="logo__image" src="images/logo__image.png" alt="Logo image">
+         <img class="logo" src="images/logo__image.png" alt="Logo image">
          <!-- lead -->
          <header class="lead">
             <h1 class="lead__title">De Pátria para Pátria</h1>
